LPS-61099 Remove test-related project properties from gradle.properties, because the individual repos won't have it